# PyMI

./: .gitignore  PyMI.sln  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: pymi-cd.yml
MI/: MI++.cpp  MI++.h  MI.vcxproj  MI.vcxproj.filters  MIExceptions.cpp  MIExceptions.h  MIValue.cpp  MIValue.h  ReadMe.txt  stdafx.cpp  stdafx.h
PyMI/: Application.cpp  Application.h  Callbacks.cpp  Callbacks.h  Class.cpp  Class.h  DestinationOptions.cpp  DestinationOptions.h  Instance.cpp  Instance.h  MiError.cpp  MiError.h  Operation.cpp  Operation.h  OperationOptions.cpp  OperationOptions.h  PyMI.cpp  PyMI.h  PyMI.vcxproj  PyMI.vcxproj.filters  PythonDir.props  README.rst  ReadMe.txt  Serializer.cpp  Serializer.h  Session.cpp  Session.h  Utils.cpp  Utils.h  benchmark.py  benchmark2.py  setup.py  setup_vs.py  stdafx.cpp  stdafx.h  targetver.h  test.py  test_vmutilsv2.py  wmi.py
PyMI/Samples/: benchmark.py  benchmark3.py  test.py  test_vmutilsv2.py
PyMI/src/mi/: __init__.py
PyMI/src/samples/: benchmark.py  benchmark2.py  benchmark3.py  custom_operation_options.py  test.py  test2.py
PyMI/src/wmi/: __init__.py
PyMI/src/wmi/tests/functional/: test_base.py  test_basic_ops.py  test_timeouts.py
wmi/: __init__.py
wmi/samples/: benchmark2.py
wmi/tests/functional/: test_basic_ops.py  test_timeouts.py
