[metadata]
name = PyMI
summary = Windows Management Infrastructure API for Python.
author = Alessandro Pilotti
author-email = info@cloudbasesolutions.com
home-page = https://github.com/cloudbase/PyMI
description-file = PyMI/README.rst
classifier =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Topic :: System :: Systems Administration
keywords = wmi mi windows

[files]
# mi.pyd is declared separately as an extension.
packages = wmi
